negative_tests/test3.octo
7 - reutrn1() -> int { return 5 } * 8
